# g1nav

./: .envrc  .gitignore  CLAUDE.md  collect_data.py  convert_to_lerobot.py  gr00t_config.py  inspect_episode.py  main.py  problem-instruction.html  pyproject.toml  render_views.py
code/data/: collector.py
code/env/: arena.py  wbc_controller.py
