[project]
name = "g1nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "jax[cuda12]>=0.10.0",
    "mujoco>=3.7.0",
    "mujoco-mjx>=3.7.0",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.21.0.82",
    "nvidia-cusolver-cu12>=11.7.5.82",
    "nvidia-cusparse-cu12>=12.5.10.65",
]
